--- a/assets/bootstrap/css/custom.css
+++ b/assets/bootstrap/css/custom.css
@@ -4,7 +4,20 @@ h1, h2, h3 {
 }
 
 h1 {
-	font-size: 3em;
+	font-size: 5em;
 	font-weight: 700;
 	color: #737373;
+	letter-spacing: -2px;
+}
+
+h2 {
+	font-size: 3em;
+	font-weight: 300;
+	color: #d3d3d3;
+	letter-spacing: -1px;
+}
+
+p {
+	font-size: 1.5em;
+	color: #535353;
 }
