--- a/assets/bootstrap/css/github.css
+++ b/assets/bootstrap/css/github.css
@@ -343,6 +343,7 @@
 .markdown-body dl,
 .markdown-body table,
 .markdown-body pre {
+  font-size: 0.9em;
   margin-top: 0;
   margin-bottom: 16px;
 }
