--- a/assets/bootstrap/css/custom.css
+++ b/assets/bootstrap/css/custom.css
@@ -1,61 +1,171 @@
-/* custom.css */
-h1, h2, h3 {
-	font-family: "Helvetica Neue"
+/*!
+ * Start Bootstrap - 2 Col Portfolio HTML Template (http://startbootstrap.com)
+ * Code licensed under the Apache License v2.0.
+ * For details, see http://www.apache.org/licenses/LICENSE-2.0.
+ */
+
+@font-face{
+    font-family:'Avenir';
+    src: url("https://cdn.ycombinator.com/fonts/c886ac4d-0476-43f2-859c-69521d566f36-c8e3ce1a.eot?#iefix");
+    src:url("https://cdn.ycombinator.com/fonts/c886ac4d-0476-43f2-859c-69521d566f36-c8e3ce1a.eot?#iefix") format("eot"),url("https://cdn.ycombinator.com/fonts/bfb11081-e571-43ad-bed9-8953cfd4133e.woff2") format("woff2"),url("https://cdn.ycombinator.com/fonts/e35493b4-782b-41f0-b3f0-b7e5d0ceab0b-7b05f688.woff") format("woff"),url("https://cdn.ycombinator.com/fonts/3441ac36-8e74-4708-8a0e-bc7eb293b307-395f4283.ttf") format("truetype"), url("https://cdn.ycombinator.com/fonts/57fd8d3b-c855-4bd8-9e49-04ae9a760f9d-87d107b6.svg#svgAvenirLight") format("svg");
+    font-weight:normal;
+    font-style:normal;
 }
 
-h1 {
-	font-size: 4em;
-	font-weight: 700;
-	color: #434343;
-	letter-spacing: -2px;
+body {
+    background-color: rgba(239, 239, 239, 0.3);
+    color: #313A42;
+    font-family: "Avenir";
+    margin: 0 auto !important;
+    padding-top: 5%;
 }
 
-h2 {
-	font-size: 2em;
-	font-weight: 300;
-	color: #434343;
-	line-height: 50px;
-	/*letter-spacing: 1px;*/	
-	/*word-spacing: 10px;*/
+.row {
+    margin-left: none !important;
+    margin-right: none !important;
 }
 
-h3 {
-	font-weight: 400;
-	font-size: 1.5em;
-	color: #838383;
-	line-height: 30px;
-
+.description {
+    padding-bottom: 9px;
+    font-size: 40px;
+    line-height: 50px;
+    margin: 50px 0px 50px;
 }
 
-p {
-	font-size: 1em;
-	color: #434343;
+@media (max-width: 991px) {
+    .description {
+	font-size: 36px;
+	line-height: 48px;
+    }
+
+    .info {
+	font-size: 18px;
+	line-height: 26px;
+    }
+
+    .right-column {
+	padding-top: 50px;
+    }
+
+    .main-content {
+	padding-left: 16px;
+	padding-right: 16px;
+    }
 }
 
-.main-container {
-	padding-left: 10%;
-	padding-right: 10%;
-	padding-top: 5%;
+.info {
+    font-size: 24px;
+    line-height: 38px;
+    margin-top: 0em;
+    margin-bottom: 2em;
 }
 
-.headshot {
-	margin-top: 12%;
-	margin-right: 5%;
-	float: left;
-	width: 20%;
-	border-radius: 50%;
+.read-more, a.read-more:hover, a.read-more:visited {
+    color: rgba(240, 118, 47, 1);
+    /*font-size: 15px;*/
 }
 
-.left-col, .right-col {
-	position: relative;
+a.read-more:hover {
+    font-weight: 500;
 }
 
-.left-col {
-	float:left;
-	width: 20%;
+.groups-outer {
+    display: table;
+    /* position: absolute; */
+
+    background-color: #242C33;
+    width: 100%;
+    height: 160px;
+
+    border-radius: 4px;
+    box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.12);
 }
 
-.right-col{
-	float: left;
-	width: 80%;
+@media (min-width: 992px) {
+    .groups-outer {
+	width: 340px;
+    }
+}
+
+.groups-middle {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.groups {
+    color: #8D9AA6;
+    margin-top: 1em;
+}
+
+.groups-label {
+    font-size: 12px;
+    letter-spacing: 0.5px;
+}
+
+.groups-text {
+    font-size: 15px;
+    line-height: 23px;
+}
+
+.groups-inner {
+    margin-left: auto;
+    margin-right: auto;
+    width: 266px;
+    /* margin: auto; */
+    /* width: 80%; */
+
+    /* height: auto; */
+
+    /* text-align:center; */
+    /* vertical-align: middle; */
+    /* display: table-cell;    */
+}
+
+.portfolio-item {
+    margin-bottom: 25px;
+}
+
+footer {
+    margin: 50px 0;
+}
+
+.center-on-small {
+    text-align: center !important;
+    margin:auto !important;
+
+@media (max-width: 991px) {
+    .center-on-small {
+	text-align: center;
+	margin:auto;
+    }
+
+    .main-content {
+	padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    }
+}
+
+@media (min-width: 992px) {
+    .main-content {
+	padding-top: 115px;
+    }
+
+    .right-column {
+	width: 58%;
+    }
+}
+
+.inner-content {
+    max-width:980px;
+}
+
+@media (max-width: 991px) {
+    .inner-content {
+	padding: 0px;
+	width: 100%;
+    }
+
+    .left-column {
+	padding: 0px;
+    text-align: right;
+    }
 }
