--- a/assets/bootstrap/css/custom.css
+++ b/assets/bootstrap/css/custom.css
@@ -8,7 +8,7 @@
 body {
     background-color: white;
     color: #333;
-    font-family: "Charter";
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif, 'Helvetica';
     margin: 0 auto !important;
     padding-top: 5%;
 }
